fix width on firefox

--- a/css/accounts.css
+++ b/css/accounts.css
@@ -68,6 +68,7 @@ body {
 label{
 	float: left;
 	margin-bottom: 5px;
+	width: 100%;
 }
 
 small {
